[gd_scene load_steps=4 format=3 uid="uid://cacadb3mp1p46"]

[ext_resource type="Script" uid="uid://75vrun8e1dqq" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="SpriteFrames" uid="uid://dns7brsdfvf5b" path="res://scenes/player/sprites/player_sprite_frames.tres" id="2_dovo2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7p2l"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
platform_floor_layers = 4278190082
platform_wall_layers = 2
script = ExtResource("1_8afob")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, -17)
sprite_frames = ExtResource("2_dovo2")
frame_progress = 0.0140653625
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x7p2l")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_x7p2l")

[node name="GrappleRay" type="RayCast2D" parent="."]
collision_mask = 10

[node name="GrappleLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
